--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-website",
   "version": "0.1.0",
-  "homepage": "https://mariyatur27.github.io/Personal-Website/",
+  "homepage": "https://anay-baid-uwaterloo.netlify.app/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^6.0.0",
